tests/reference/asr-template_error_10-7c4bf68.stderr
semantic error: Parameter 't' is declared more than once in requirement 'op_r'
  --> tests/errors/template_error_10.f90:4:5 - 13:1
   |
 4 |        requirement op_R ( T, T, V, V, op_func )
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
13 |    
   | ...^ 
